added some other things

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Mindustry Server List</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Font Awesome for GitHub icon -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <div class="container">
@@ -13,6 +15,9 @@
       <button id="themeToggleBtn">🌓 Toggle Theme</button>
       <button id="autoRefreshToggleBtn">🔄 Auto-Refresh</button>
       <small id="autoRefreshStatus">Auto-refresh enabled (10s)</small>
+      <a href="https://github.com/CuboBuilder/something2" target="_blank" id="githubLink" title="View on GitHub">
+        <i class="fab fa-github"></i>
+      </a>
     </div>
 
     <table id="serverList">
