--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Browse the best public Mindustry servers with live player counts, maps, versions, and descriptions. Add your own server to the list.">
+  <meta name="keywords" content="Mindustry servers, Mindustry multiplayer, Mindustry server list, Mindustry online, Mindustry map, Mindustry IP">
+  <meta name="author" content="ChatGPT">
+  <meta name="robots" content="index, follow">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mindustry Server List</title>
   <link rel="stylesheet" href="style.css">
   <!-- Font Awesome for GitHub icon -->
